--- a/.github/workflows/infracost.yaml
+++ b/.github/workflows/infracost.yaml
@@ -33,6 +33,7 @@ jobs:
         run: |
           infracost breakdown --path=${TF_ROOT} \
                               --format=json \
+                              --usage-file=infracost-usage.yml \
                               --out-file=/tmp/infracost-base.json
 
       # Checkout the current PR branch so we can create a diff.
@@ -45,6 +46,7 @@ jobs:
           infracost diff --path=${TF_ROOT} \
                           --format=json \
                           --compare-to=/tmp/infracost-base.json \
+                          --usage-file=infracost-usage.yml \
                           --out-file=/tmp/infracost.json
 
       # Posts a comment to the PR using the 'update' behavior.
