--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,6 +38,7 @@ jobs:
       contents: 'read'
       id-token: 'write'
     steps:
+      - uses: actions/checkout@v3
       - name: Authenticate to Google Cloud
         id: auth
         uses: google-github-actions/auth@v0.8.1
